Fix PivotBlockConfirmer peer handling
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>